--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-     <link rel="stylesheet" href="./css/bootstrap.rtl.min.css"> 
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <!-- <link rel="stylesheet" href="./css/bootstrap.rtl.min.css">  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+  <h1>Hello, world!</h1>
+
+  <div class="container-fluid pt-5 bg-primary text-white text-center">
+    <h1>Bootstrap 5</h1>
+    <p>This is a simple example of a Bootstrap 5 container with a primary background.</p>
+  </div>
+
+  <div class="container pt-6 bg-dark text-white text-center">
+    <h1>Bootstrap 5</h1>
+    <p>This is a simple example of a Bootstrap 5 container with a primary background.</p>
+  </div>
+
+  <div class="container pt-3">Responsive</div>
+
+  <div class="container-sm border mt-3">Responsive - Sm</div>
+  <div class="container-md border mt-3">Responsive - Md</div>
+  <div class="container-lg border mt-3">Responsive - Lg</div>
+  <div class="container-xl border mt-3">Responsive - xl</div>
+  <div class="container-xxl border mt-3">Responsive - xxl</div>
 
 
-    <div class="container-fluid p-5 bg-primary text-white text-center">
-        <h1>Bootstrap 5</h1>
-        <p>This is a simple example of a Bootstrap 5 container with a primary background.</p>
-    </div>
-    <script src="./JS/bootstrap.bundle.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-  </body>
+
+
+
+  <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
