--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
   <div class="container-lg border mt-3">Responsive - Lg</div>
   <div class="container-xl border mt-3">Responsive - xl</div>
   <div class="container-xxl border mt-3">Responsive - xxl</div>
-
+</br>
+  <div class="container-fluid">
+    <h2>Gird - col</h2>
+    <div class="row">
+      <div class="col bg-success">Column 1</div>
+      <div class="col bg-danger">Column 2</div>
+      <div class="col bg-secondary">Column 3</div>
+      <div class="col bg-info">Column 4</div>
+      <div class="col bg-warning">Column 5</div>
+    </div>
+  </div>
 
 
 
