Gird - Col - Responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>This is a simple example of a Bootstrap 5 container with a primary background.</p>
   </div>
 
-  <div class="container pt-3">Responsive</div>
+  <div class="container  bg-info text-center">Responsive</div>
 
   <div class="container-sm border mt-3">Responsive - Sm</div>
   <div class="container-md border mt-3">Responsive - Md</div>
@@ -41,6 +41,17 @@
       <div class="col bg-warning">Column 5</div>
     </div>
   </div>
+
+</br>
+<div class="container-fluid bg-info pt-5 text-center text-white">
+  <h2>Gird - Col - Responsive</h2>
+  <div class="row">
+    <div class="col-sm-3 bg-success">Column 1</div>
+    <div class="col-sm-2 bg-danger">Column 2</div>
+    <div class="col-sm-5 bg-warning">Column 3</div>
+    <div class="col-sm-2 bg-secondary">Column 4</div>
+  </div>
+</div>
 
 
 
