--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="container-lg border mt-3">Responsive - Lg</div>
   <div class="container-xl border mt-3">Responsive - xl</div>
   <div class="container-xxl border mt-3">Responsive - xxl</div>
-</br>
+  </br>
   <div class="container-fluid">
     <h2>Gird - col</h2>
     <div class="row">
@@ -42,16 +42,36 @@
     </div>
   </div>
 
-</br>
-<div class="container-fluid bg-info pt-5 text-center text-white">
-  <h2>Gird - Col - Responsive</h2>
-  <div class="row">
-    <div class="col-sm-3 bg-success">Column 1</div>
-    <div class="col-sm-2 bg-danger">Column 2</div>
-    <div class="col-sm-5 bg-warning">Column 3</div>
-    <div class="col-sm-2 bg-secondary">Column 4</div>
+  </br>
+  <div class="container-fluid bg-info pt-5 text-center text-white">
+    <h2>Gird - Col - Responsive</h2>
+    <div class="row">
+      <div class="col-sm-3 bg-success">Column 1</div>
+      <div class="col-sm-2 bg-danger">Column 2</div>
+      <div class="col-sm-5 bg-warning">Column 3</div>
+      <div class="col-sm-2 bg-secondary">Column 4</div>
+    </div>
   </div>
-</div>
+
+  </br>
+
+  <!-- Tag  -->
+  <h1>how you doin ?</h1>
+  <h2>how you doin?</h2>
+  <h3>how you doin?</h3>
+  <h4>how you doin?</h4>
+  <h5>how you doin?</h5>
+  <h6>how you doin?</h6>
+
+  <!-- class -->
+
+  <p class="h1 text-center pt-6 border mt-3">How do you do</p>
+  <p class="h2 text-center pt-6  bg-danger">How do you do</p>
+  <p class="h3 text-center pt-6 bg-success">How do you do</p>
+  <p class="h4 text-center pt-6 border mt-3 bg-warning">How do you do</p>
+  <p class="h5 text-center pt-6  bg-danger">How do you do</p>
+  <p class="h6 text-center pt-6 border mt-">How do you do</p>
+
 
 
 
