--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
   <p class="h5 text-center pt-6  bg-danger">How do you do</p>
   <p class="h6 text-center pt-6 border mt-">How do you do</p>
 
+<!-- disply -->
 
-
+  <h1 class="disply-1 text-center text-danger  bg-warning">how you doin ?</h1>
+  <h2 class="disply-2 bg-danger">how you doin?</h2>
+  <h3 class="disply-3 text-center bg-info">how you doin?</h3>
+  <h4 class="disply-4 bg-primary text-info">how you doin?</h4>
+  <h5 class="disply-5 text-center bg-warning">how you doin?</h5>
+  <h6 class="disply-6 bg-success text-danger">how you doin?</h6>
 
 
   <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
