mark /small / headind

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
   <h5 class="disply-5 text-center bg-warning">how you doin?</h5>
   <h6 class="disply-6 bg-success text-danger">how you doin?</h6>
 
-
+<div class="container mt-5">
+  <h1 class="mark text-center text-danger">Hello how are u ?</h1>
+  <h4>heading h4 <small>Text</small></h4>
+  <h3>heading h3 <mark>Text</mark></h3>
+</div>
   <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
