--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <p class="h5 text-center pt-6  bg-danger">How do you do</p>
   <p class="h6 text-center pt-6 border mt-">How do you do</p>
 
-<!-- disply -->
+  <!-- disply -->
 
   <h1 class="disply-1 text-center text-danger  bg-warning">how you doin ?</h1>
   <h2 class="disply-2 bg-danger">how you doin?</h2>
@@ -81,11 +81,24 @@
   <h5 class="disply-5 text-center bg-warning">how you doin?</h5>
   <h6 class="disply-6 bg-success text-danger">how you doin?</h6>
 
-<div class="container mt-5">
-  <h1 class="mark text-center text-danger">Hello how are u ?</h1>
-  <h4>heading h4 <small>Text</small></h4>
-  <h3>heading h3 <mark>Text</mark></h3>
-</div>
+  <div class="container mt-5">
+    <h1 class="mark text-center text-danger">Hello how are u ?</h1>
+    <h4>heading h4 <small>Text</small></h4>
+    <h3>heading h3 <mark>Text</mark></h3>
+  </div>
+
+  <!-- table -->
+  <div class="container mt-3">
+    <h1>description Lists</h1>
+    <dl>
+      <dt class="mark">Harry Potter</dt>
+      <dd>J.K POWLING</dd>
+      <dt>Description List Title</dt>
+      <dd>This is the second description.</dd>
+    </dl>
+  </div>
+
+  
   <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
