--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h4>how you doin?</h4>
   <h5>how you doin?</h5>
   <h6>how you doin?</h6>
-
+  </br>
   <!-- class -->
 
   <p class="h1 text-center pt-6 border mt-3">How do you do</p>
@@ -71,22 +71,23 @@
   <p class="h4 text-center pt-6 border mt-3 bg-warning">How do you do</p>
   <p class="h5 text-center pt-6  bg-danger">How do you do</p>
   <p class="h6 text-center pt-6 border mt-">How do you do</p>
+  </br>
 
   <!-- disply -->
-
   <h1 class="disply-1 text-center text-danger  bg-warning">how you doin ?</h1>
   <h2 class="disply-2 bg-danger">how you doin?</h2>
   <h3 class="disply-3 text-center bg-info">how you doin?</h3>
   <h4 class="disply-4 bg-primary text-info">how you doin?</h4>
   <h5 class="disply-5 text-center bg-warning">how you doin?</h5>
   <h6 class="disply-6 bg-success text-danger">how you doin?</h6>
+  </br>
 
   <div class="container mt-5">
     <h1 class="mark text-center text-danger">Hello how are u ?</h1>
     <h4>heading h4 <small>Text</small></h4>
     <h3>heading h3 <mark>Text</mark></h3>
   </div>
-
+  </br>
   <!-- table -->
   <div class="container mt-3">
     <h1>description Lists</h1>
@@ -98,7 +99,13 @@
     </dl>
   </div>
 
-  
+  </br>
+  <div class="container mt-3">
+    <p>use <kbd>alt + shift + F</kbd> </p>
+    <p>Tag HTML : <code>div</code> / <code>span</code> / <code>section</code> </p>
+  </div>
+
+
   <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
