--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
   </div>
 
 
+  <div class="container mt-3">
+    <p class="text-center">Eminem </p>
+    <p class="text-end">I knew this day was coming </p>
+    <p class="text-start">Sometimes, you gotta come back down It’s all going to hell now </p>
+    <a href="https://github.com/Hanieh-Sadeghi ">Github Hanieh-Sadeghi </a>
+  </br>
+    <p class="text-lowercase">Lowercased</p>
+    <p class="text-uppercase">Uppercased</p>
+    <p class="text-capitalize">Capitalized</p>
+  </div>
+
+
   <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
