--- a/index.html
+++ b/index.html
@@ -111,17 +111,30 @@
     <p class="text-end">I knew this day was coming </p>
     <p class="text-start">Sometimes, you gotta come back down It’s all going to hell now </p>
     <a href="https://github.com/Hanieh-Sadeghi ">Github Hanieh-Sadeghi </a>
-  </br>
+    </br>
     <p class="text-lowercase">Lowercased</p>
     <p class="text-uppercase">Uppercased</p>
     <p class="text-capitalize">Capitalized</p>
   </div>
 
+  <div class="container">
+    <p class="text-muted">This text is muted</p>
+    <p class="text-primary">This text is primary</p>
+    <p class="text-success">This text is success</p>
+    <p class="text-info">This text is info</p>
+    <p class="text-warning">This text is warning</p>
+    <p class="text-danger">This text is danger</p>
+    <p class="text-secondary">This text is secondary</p>
+    <p class="text-dark">This text is dark</p>
+    <p class="text-body">This text is body</p>
+    <p class="text-light bg-dark">This text is light</p>
+    <p class="text-white bg-dark">This text is white</p>
 
-  <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+
+    <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
