--- a/index.html
+++ b/index.html
@@ -131,6 +131,44 @@
     <p class="text-white bg-dark">This text is white</p>
 
 
+    <div class="container">
+      <h1>Table</h1>
+      <table class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr class="table-dark">
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Hanie</td>
+            <td>Sadeghi</td>
+            <td>sadegh221har@gmail.com</td>
+          </tr>
+          <tr class="table-success" >
+            <td>Navid</td>
+            <td>Sadeghi</td>
+            <td>navidsadeghi021@gmail.com</td>
+          </tr>
+          <tr class="table-info">
+            <td>Nafise</td>
+            <td>Asgari</td>
+            <td>nafise0021@gmail.com</td>
+          </tr>
+          <tr class="table-danger">
+            <td>Neda</td>
+            <td>Asgari</td>
+            <td>neda.asgari021@gmail.com</td>
+          </tr>
+          <tr class="table-primary">
+            <td>Ahmad</td>
+            <td>Sadeghi</td>
+            <td>ahmadd.sadeghi021@gmail.com</td>
+          </tr>
+    </div>
+
     <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
