--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
     <p class="text-white bg-dark">This text is white</p>
 
 
+
+    <div class="container">
+      <h1> rounded corners</h1> 
+      <img src="./photo_2024-07-29_03-13-52.jpg" class="rounded" width="250" height="250">
+      <img src="./photo_2024-07-29_03-14-23.jpg" class="rounded-circle" width="250" height="250">
+      <img src="./photo_2024-07-29_03-14-40.jpg" class="rounded" width="350" height="250">
+      <img src="./photo_2024-07-29_03-14-12.jpg" class="rounded" width="250" height="370">
+    </div>
+
+
+    </br>
     <div class="container">
       <h1>Table</h1>
       <table class="table table-striped table-bordered table-hover">
@@ -147,7 +158,7 @@
             <td>Sadeghi</td>
             <td>sadegh221har@gmail.com</td>
           </tr>
-          <tr class="table-success" >
+          <tr class="table-success">
             <td>Navid</td>
             <td>Sadeghi</td>
             <td>navidsadeghi021@gmail.com</td>
@@ -168,6 +179,9 @@
             <td>ahmadd.sadeghi021@gmail.com</td>
           </tr>
     </div>
+
+    </br>
+
 
     <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
