--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
     <div class="container">
-      <h1> rounded corners</h1> 
+      <h1> rounded corners</h1>
       <img src="./photo_2024-07-29_03-13-52.jpg" class="rounded" width="250" height="250">
       <img src="./photo_2024-07-29_03-14-23.jpg" class="rounded-circle" width="250" height="250">
       <img src="./photo_2024-07-29_03-14-40.jpg" class="rounded" width="350" height="250">
@@ -145,6 +145,7 @@
     <div class="container">
       <h1>Table</h1>
       <table class="table table-striped table-bordered table-hover">
+
         <thead>
           <tr class="table-dark">
             <th>Firstname</th>
@@ -153,36 +154,40 @@
           </tr>
         </thead>
         <tbody>
+
           <tr>
             <td>Hanie</td>
             <td>Sadeghi</td>
             <td>sadegh221har@gmail.com</td>
           </tr>
+
           <tr class="table-success">
             <td>Navid</td>
             <td>Sadeghi</td>
             <td>navidsadeghi021@gmail.com</td>
           </tr>
+
           <tr class="table-info">
             <td>Nafise</td>
             <td>Asgari</td>
             <td>nafise0021@gmail.com</td>
           </tr>
+
           <tr class="table-danger">
             <td>Neda</td>
             <td>Asgari</td>
             <td>neda.asgari021@gmail.com</td>
           </tr>
+
           <tr class="table-primary">
             <td>Ahmad</td>
             <td>Sadeghi</td>
             <td>ahmadd.sadeghi021@gmail.com</td>
           </tr>
+        </tbody>
     </div>
 
     </br>
-
-
     <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
