--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
 
     <div class="container">
       <h1> rounded corners</h1>
-      <img src="./photo_2024-07-29_03-13-52.jpg" class="rounded" width="250" height="250">
-      <img src="./photo_2024-07-29_03-14-23.jpg" class="rounded-circle" width="250" height="250">
-      <img src="./photo_2024-07-29_03-14-40.jpg" class="rounded" width="350" height="250">
-      <img src="./photo_2024-07-29_03-14-12.jpg" class="rounded" width="250" height="370">
+      <img src="./photo_2024-07-29_03-13-52.jpg" class="img-fluid" >
+      <img src="./photo_2024-07-29_03-14-23.jpg" class="float-end" width="250" height="250">
+      <img src="./photo_2024-07-29_03-14-40.jpg" class="rounded-circle" width="350" height="250">
+      </br>
+      <img src="./photo_2024-07-29_03-14-12.jpg" class="mx-auto"width="300" height="350"> 
     </div>
 
 
@@ -154,7 +155,6 @@
           </tr>
         </thead>
         <tbody>
-
           <tr>
             <td>Hanie</td>
             <td>Sadeghi</td>
@@ -184,7 +184,9 @@
             <td>Sadeghi</td>
             <td>ahmadd.sadeghi021@gmail.com</td>
           </tr>
+
         </tbody>
+
     </div>
 
     </br>
