--- a/index.html
+++ b/index.html
@@ -134,66 +134,97 @@
 
     <div class="container">
       <h1> rounded corners</h1>
-      <img src="./photo_2024-07-29_03-13-52.jpg" class="img-fluid" >
+      <img src="./photo_2024-07-29_03-13-52.jpg" class="img-fluid">
       <img src="./photo_2024-07-29_03-14-23.jpg" class="float-end" width="250" height="250">
       <img src="./photo_2024-07-29_03-14-40.jpg" class="rounded-circle" width="350" height="250">
       </br>
-      <img src="./photo_2024-07-29_03-14-12.jpg" class="mx-auto"width="300" height="350"> 
+      <img src="./photo_2024-07-29_03-14-12.jpg" class="mx-auto" width="300" height="350">
     </div>
 
 
     </br>
     <div class="container">
-      <h1>Table</h1>
-      <table class="table table-striped table-bordered table-hover">
+      <h2>Alert</h2>
+      <div class="alert alert-success"> This alert box success
+      </div>
+      <div class="alert alert-info">
+        This alert box info
+      </div>
+      <div class="alert alert-warning">
+        This alert box warning
+      </div>
+      <div class="alert alert-danger">
+        This alert box danger </div>
+      <div class="alert alert-light">
+        This alert box light
+      </div>
+      <div class="alert alert-dark">
+        This alert box dark
+      </div>
+      <div class="alert alert-primary">
+        This alert box primary
+      </div>
+      <div class="alert alert-secondary">
+        This alert box secondary
+      </div>
+      <div class="alert alert-light bg-dark text-white">
+        This alert box light dark
+      </div>
+      <div class="alert alert-dark bg-white text-dark">
+        This alert box dark white
+      </div>
+      <div class="alert alert-primary bg-white text-dark">
+        This alert box primary dark
+      </div>
 
-        <thead>
-          <tr class="table-dark">
-            <th>Firstname</th>
-            <th>Lastname</th>
-            <th>Email</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Hanie</td>
-            <td>Sadeghi</td>
-            <td>sadegh221har@gmail.com</td>
-          </tr>
+      <div class="container">
+        <h1>Table</h1>
+        <table class="table table-striped table-bordered table-hover">
+          <thead>
+            <tr class="table-dark">
+              <th>Firstname</th>
+              <th>Lastname</th>
+              <th>Email</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Hanie</td>
+              <td>Sadeghi</td>
+              <td>sadegh221har@gmail.com</td>
+            </tr>
+            <tr class="table-success">
+              <td>Navid</td>
+              <td>Sadeghi</td>
+              <td>navidsadeghi021@gmail.com</td>
+            </tr>
+            <tr class="table-info">
+              <td>Nafise</td>
+              <td>Asgari</td>
+              <td>nafise0021@gmail.com</td>
+            </tr>
+            <tr class="table-danger">
+              <td>Neda</td>
+              <td>Asgari</td>
+              <td>neda.asgari021@gmail.com</td>
+            </tr>
+            <tr class="table-primary">
+              <td>Ahmad</td>
+              <td>Sadeghi</td>
+              <td>ahmadd.sadeghi021@gmail.com</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-          <tr class="table-success">
-            <td>Navid</td>
-            <td>Sadeghi</td>
-            <td>navidsadeghi021@gmail.com</td>
-          </tr>
 
-          <tr class="table-info">
-            <td>Nafise</td>
-            <td>Asgari</td>
-            <td>nafise0021@gmail.com</td>
-          </tr>
+      </br>
 
-          <tr class="table-danger">
-            <td>Neda</td>
-            <td>Asgari</td>
-            <td>neda.asgari021@gmail.com</td>
-          </tr>
 
-          <tr class="table-primary">
-            <td>Ahmad</td>
-            <td>Sadeghi</td>
-            <td>ahmadd.sadeghi021@gmail.com</td>
-          </tr>
-
-        </tbody>
-
-    </div>
-
-    </br>
-    <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+      <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
