--- a/index.html
+++ b/index.html
@@ -141,24 +141,69 @@
       <img src="./photo_2024-07-29_03-14-12.jpg" class="mx-auto" width="300" height="350">
     </div>
 
+    </br>
+
+    <div class="container">
+      <h1>Table</h1>
+      <table class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr class="table-dark">
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Hanie</td>
+            <td>Sadeghi</td>
+            <td>sadegh221har@gmail.com</td>
+          </tr>
+          <tr class="table-success">
+            <td>Navid</td>
+            <td>Sadeghi</td>
+            <td>navidsadeghi021@gmail.com</td>
+          </tr>
+          <tr class="table-info">
+            <td>Nafise</td>
+            <td>Asgari</td>
+            <td>nafise0021@gmail.com</td>
+          </tr>
+          <tr class="table-danger">
+            <td>Neda</td>
+            <td>Asgari</td>
+            <td>neda.asgari021@gmail.com</td>
+          </tr>
+          <tr class="table-primary">
+            <td>Ahmad</td>
+            <td>Sadeghi</td>
+            <td>ahmadd.sadeghi021@gmail.com</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     </br>
     <div class="container">
       <h2>Alert</h2>
-      <div class="alert alert-success"> This alert box success
+      <div class="alert alert-success alert-dismissible fade show">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        This alert box success
       </div>
-      <div class="alert alert-info">
-        This alert box info
+      <div class="alert alert-info alert-dismissible fade show">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        This alert box success
       </div>
-      <div class="alert alert-warning">
-        This alert box warning
+      <div class="alert alert-danger alert-dismissible fade show">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        This alert box danger
       </div>
-      <div class="alert alert-danger">
-        This alert box danger </div>
-      <div class="alert alert-light">
+      <div class="alert alert-light alert-dismissible fade show">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         This alert box light
       </div>
-      <div class="alert alert-dark">
+      <div class="alert alert-dark alert-dismissible fade show">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         This alert box dark
       </div>
       <div class="alert alert-primary">
@@ -176,50 +221,7 @@
       <div class="alert alert-primary bg-white text-dark">
         This alert box primary dark
       </div>
-
-      <div class="container">
-        <h1>Table</h1>
-        <table class="table table-striped table-bordered table-hover">
-          <thead>
-            <tr class="table-dark">
-              <th>Firstname</th>
-              <th>Lastname</th>
-              <th>Email</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Hanie</td>
-              <td>Sadeghi</td>
-              <td>sadegh221har@gmail.com</td>
-            </tr>
-            <tr class="table-success">
-              <td>Navid</td>
-              <td>Sadeghi</td>
-              <td>navidsadeghi021@gmail.com</td>
-            </tr>
-            <tr class="table-info">
-              <td>Nafise</td>
-              <td>Asgari</td>
-              <td>nafise0021@gmail.com</td>
-            </tr>
-            <tr class="table-danger">
-              <td>Neda</td>
-              <td>Asgari</td>
-              <td>neda.asgari021@gmail.com</td>
-            </tr>
-            <tr class="table-primary">
-              <td>Ahmad</td>
-              <td>Sadeghi</td>
-              <td>ahmadd.sadeghi021@gmail.com</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-
       </br>
-
 
       <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
