--- a/index.html
+++ b/index.html
@@ -223,6 +223,18 @@
       </div>
       </br>
 
+      <div class="container mt-3">
+        <button type="button" class="btn btn-outline">basic</button>
+        <button type="button" class="btn btn-primary active">btn-primary</button>
+        <button type="button" class="btn btn-info active">btn-info</button>
+        <button type="button" class="btn btn-outline-danger">btn-danger</button>
+        <button type="button" class="btn btn-dark btn-sm">btn-dark</button>
+        <button type="button" class="btn btn-light">btn-light</button>
+        <button type="button" class="btn btn-success">btn-success</button>
+        <button type="button" class="btn btn-outline-warning">btn-warning</button>
+        <button type="button" class="btn btn-secondary">btn-secondary</button>
+      </div>
+
       <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
