--- a/index.html
+++ b/index.html
@@ -234,6 +234,13 @@
         <button type="button" class="btn btn-outline-warning">btn-warning</button>
         <button type="button" class="btn btn-secondary">btn-secondary</button>
       </div>
+    </br>
+      <h1>Block Level Buttons</h1>
+      <div class="d-grid gap-2">
+        <button type="button" class="btn btn-primary btn-block">btn-primary</button>
+        <button type="button" class="btn btn-primary btn-block">btn-primary</button>
+        <button type="button" class="btn btn-primary btn-block">btn-primary</button>
+      </div>
 
       <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
