--- a/index.html
+++ b/index.html
@@ -234,12 +234,29 @@
         <button type="button" class="btn btn-outline-warning">btn-warning</button>
         <button type="button" class="btn btn-secondary">btn-secondary</button>
       </div>
-    </br>
+      </br>
       <h1>Block Level Buttons</h1>
       <div class="d-grid gap-2">
         <button type="button" class="btn btn-primary btn-block">btn-primary</button>
         <button type="button" class="btn btn-primary btn-block">btn-primary</button>
         <button type="button" class="btn btn-primary btn-block">btn-primary</button>
+      </div>
+
+      <div class="container mt-3">
+        <h2>Spinner Buttons</h2>
+        <button class="btn btn-primary">
+          <span class="spinner-border spinner-border-sm"></span>
+        </button>
+
+        <button class="btn btn-primary">
+          <span class="spinner-border spinner-border-sm"></span>
+          Loading...
+        </button>
+
+        <button class="btn btn-primary">
+          <span class="spinner-grow spinner-grow-sm"></span>
+          Loading...
+        </button>
       </div>
 
       <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
