--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
         </ul>
       </div>
 
+      <div class="container mt-3">
+        <div class="btn-group gap-1">
+        <button type="button" class="btn btn-primary">test1</button>
+        <button type="button" class="btn btn-primary">test2</button>
+        <div class="btn-group">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">test 3</button>
+        <ul class="dropdown-menu">
+        <li><a href="#" class="dropdown-item">test4</a></li> <li><a href="#" class="dropdown-item">test5</a></li>
+        </ul>
+        </div>
       <!-- <script src="./JS/bootstrap.bundle.min.js"></script> -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
